cluster-cd/apps/base/blocky/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: &name blocky
    app.kubernetes.io/instance: *name
    app.kubernetes.io/component: *name
    app.kubernetes.io/part-of: *name
    k8s-app: *name
  name: *name
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *name
      app.kubernentes.io/component: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *name
        app.kubernentes.io/component: *name
    spec:
      securityContext:
        runAsUser: 100
        runAsGroup: 100
        fsGroup: 100
      containers:
        - name: blocky
          image: spx01/blocky:v0.20
          imagePullPolicy: IfNotPresent
          args: ["--config", "/config/config.yaml"]
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 64Mi
          # securityContext:
          #   allowPrivilegeEscalation: false
          #   runAsUser: 100
          #   seccompProfile:
          #     type: RuntimeDefault
          #   capabilities:
          #     drop:
          #       - ALL
          ports:
            - name: dnstcp
              containerPort: 53
              protocol: TCP
            - name: dnsudp
              containerPort: 53
              protocol: UDP
            - name: http
              containerPort: 4000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          startupProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /config
              name: mounted-config
      volumes:
        - name: mounted-config
          emptyDir: {}
        - name: blocky-config
          configMap:
            name: blocky-config
