cluster-cd/apps/base/blocky/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress: "externaldns"
  labels:
    app.kubernetes.io/instance: blocky
    app.kubernetes.io/name: &name blocky
  name: *name
spec:
  ingressClassName: nginx
  rules:
    - host: &host dns.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: blocky
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: blocky-tls
